resources/css/app.css
.wordpress-users-grid .row-controls,
.wordpress-users-grid .grid-item-header button,
.wordpress-users-grid button.btn {
    display: none !important;
}

.wordpress-users-reminder {
    display: none;

    transition: height 1s;
}

.no-row-hover tr {
    background-color: inherit !important;
}

button[type=submit]:not(.btn-wp-users) { display: none; } 

